update method update account
